--- a/LoginAnimationDemo/Base.lproj/Main.storyboard
+++ b/LoginAnimationDemo/Base.lproj/Main.storyboard
@@ -1,25 +1,99 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
-                        <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
-                    </layoutGuides>
+                <viewController id="vXZ-lx-hvc" customClass="LoginViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" image="login_bg" id="zls-VD-jyv">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                            </imageView>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="bubble1" id="uxg-TM-1F6">
+                                <rect key="frame" x="186" y="158" width="104" height="104"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                            </imageView>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="bubble2" id="T7f-VM-FlO">
+                                <rect key="frame" x="20" y="331" width="153" height="153"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                            </imageView>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="bubble4" id="od5-cH-GjJ">
+                                <rect key="frame" x="33" y="179" width="126" height="126"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                            </imageView>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="bubble5" id="PXd-eZ-gbm">
+                                <rect key="frame" x="228" y="276" width="131" height="131"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                            </imageView>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="bubble6" id="9sT-NH-tOS">
+                                <rect key="frame" x="126" y="74" width="97" height="97"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                            </imageView>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="bubble7" id="HOC-D3-ilZ">
+                                <rect key="frame" x="232" y="35" width="96" height="96"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                            </imageView>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="bubble8" id="Dl8-qp-d0c">
+                                <rect key="frame" x="33" y="35" width="79" height="79"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                            </imageView>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="bubble3" id="Dgo-7g-ruE">
+                                <rect key="frame" x="165" y="424" width="174" height="166"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                            </imageView>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="AnimateHub" id="MsK-FP-o22">
+                                <rect key="frame" x="56" y="122" width="262" height="36"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                            </imageView>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="dot" id="dbV-f4-HxR">
+                                <rect key="frame" x="115" y="108" width="7" height="11"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="bubble1" destination="Dl8-qp-d0c" id="1De-Rn-ZSQ"/>
+                        <outlet property="bubble2" destination="HOC-D3-ilZ" id="u6F-fY-oye"/>
+                        <outlet property="bubble3" destination="9sT-NH-tOS" id="Bhc-I1-hY9"/>
+                        <outlet property="bubble4" destination="uxg-TM-1F6" id="avP-3K-E95"/>
+                        <outlet property="bubble5" destination="od5-cH-GjJ" id="1Ft-fd-rzZ"/>
+                        <outlet property="bubble6" destination="PXd-eZ-gbm" id="Nhb-12-ta9"/>
+                        <outlet property="bubble7" destination="T7f-VM-FlO" id="HsV-NJ-Ild"/>
+                        <outlet property="bubble8" destination="Dgo-7g-ruE" id="qFn-3Y-oEf"/>
+                        <outlet property="dot" destination="dbV-f4-HxR" id="Pgi-kp-dlA"/>
+                        <outlet property="logo" destination="MsK-FP-o22" id="ucm-Qr-Pih"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="262.5" y="371.5"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="AnimateHub" width="262" height="36"/>
+        <image name="bubble1" width="104" height="104"/>
+        <image name="bubble2" width="153" height="153"/>
+        <image name="bubble3" width="174" height="166"/>
+        <image name="bubble4" width="126" height="126"/>
+        <image name="bubble5" width="131" height="131"/>
+        <image name="bubble6" width="97" height="97"/>
+        <image name="bubble7" width="96" height="96"/>
+        <image name="bubble8" width="79" height="79"/>
+        <image name="dot" width="7" height="6"/>
+        <image name="login_bg" width="374" height="667"/>
+    </resources>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
+    </simulatedMetricsContainer>
 </document>
