update text field and button with animation
update text field and button with animation

--- a/LoginAnimationDemo/Base.lproj/Main.storyboard
+++ b/LoginAnimationDemo/Base.lproj/Main.storyboard
@@ -58,24 +58,39 @@
                                 <rect key="frame" x="117" y="143" width="7" height="11"/>
                                 <autoresizingMask key="autoresizingMask"/>
                             </imageView>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="bubble2" id="T7f-VM-FlO">
+                                <rect key="frame" x="20" y="331" width="153" height="153"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                            </imageView>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="056DD38C-5E2D-44F2-A718-03F8F3F35F8E" id="VTW-U0-V62">
+                                <rect key="frame" x="33" y="232" width="19" height="20"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                            </imageView>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="608C1336-0A41-4253-94D2-98691C55C251" id="iyT-s2-lld">
+                                <rect key="frame" x="33" y="303" width="22" height="21"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="F3y-yG-e54">
+                                <rect key="frame" x="28" y="366" width="321" height="68"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <state key="normal" title="Log In" backgroundImage="Button Background">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="UserName" minimumFontSize="17" background="text_label_bg" id="9XT-lx-cJn">
                                 <rect key="frame" x="28" y="222" width="321" height="40"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="bubble2" id="T7f-VM-FlO">
-                                <rect key="frame" x="20" y="331" width="153" height="153"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                            </imageView>
-                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="232E8ADC-132D-4196-B010-A74ED4EE7DE7" id="VTW-U0-V62">
-                                <rect key="frame" x="33" y="232" width="19" height="20"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                            </imageView>
-                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="9F651ACC-35EE-4052-A7A3-3A42EE51706A" id="iyT-s2-lld">
-                                <rect key="frame" x="33" y="303" width="22" height="21"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -90,6 +105,7 @@
                         <outlet property="bubble7" destination="T7f-VM-FlO" id="HsV-NJ-Ild"/>
                         <outlet property="bubble8" destination="Dgo-7g-ruE" id="qFn-3Y-oEf"/>
                         <outlet property="dot" destination="dbV-f4-HxR" id="Pgi-kp-dlA"/>
+                        <outlet property="loginButton" destination="F3y-yG-e54" id="H05-jm-B4O"/>
                         <outlet property="logo" destination="MsK-FP-o22" id="ucm-Qr-Pih"/>
                         <outlet property="password" destination="g2U-GU-dbF" id="pXe-KY-aCA"/>
                         <outlet property="userName" destination="9XT-lx-cJn" id="ePb-ig-Cg7"/>
@@ -101,7 +117,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="232E8ADC-132D-4196-B010-A74ED4EE7DE7" width="19" height="20">
+        <image name="056DD38C-5E2D-44F2-A718-03F8F3F35F8E" width="19" height="20">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGOzxYJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK0HCBEW
 GxwgISksLzU4VSRudWxs1AkKCwwNDg8QViRjbGFzc1xOU0ltYWdlRmxhZ3NWTlNSZXBzV05TQ29sb3KA
@@ -196,7 +212,7 @@ AKIApACmAKgArQDEAMYAyBPKE88T2hPjE/YT+hQNFBgUIRQmFC4UMRQ2FEUUSRRQFFgUZRRqFGwUbhRz
 FHsUfhSDFIsUjhSgFKMUqAAAAAAAAAIBAAAAAAAAAD8AAAAAAAAAAAAAAAAAABSqA
 </mutableData>
         </image>
-        <image name="9F651ACC-35EE-4052-A7A3-3A42EE51706A" width="22" height="21">
+        <image name="608C1336-0A41-4253-94D2-98691C55C251" width="22" height="21">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGOzxYJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK0HCBEW
 GxwgISksLzU4VSRudWxs1AkKCwwNDg8QViRjbGFzc1xOU0ltYWdlRmxhZ3NWTlNSZXBzV05TQ29sb3KA
@@ -298,6 +314,7 @@ AAAAAAAAAAAAAAAAAAAV8g
 </mutableData>
         </image>
         <image name="AnimateHub" width="262" height="36"/>
+        <image name="Button Background" width="13" height="68"/>
         <image name="bubble1" width="104" height="104"/>
         <image name="bubble2" width="153" height="153"/>
         <image name="bubble3" width="174" height="166"/>
